test/negative/feature_finallocals.java

public class feature_finallocals {
  public feature_finallocals() {}
  public int m() {
    final int x = 42;
    return x;
  }
}


